@@ -1,5 +1,6 @@
 iowow (1.4.16) UNRELEASED; urgency=medium
 
+  * Added VERBOSE log level (iwlog.h)
   * Added iwhmap_put_str() (iwhmap.h)
   * Added iwulist_remove_first_by(), iwulist_find_first() (iwarr.h)
   * Added iwxstr_new_printf() (iwxstr.h)
